<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/background_azul" 
    >
    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simuladoMateria"
        android:textColor="@color/branco"
        android:textSize="18sp"
        android:textStyle="bold"
        android:drawableLeft="@drawable/ic_launcher" 
        android:drawablePadding="4dp"
        android:gravity="center_vertical"
        android:paddingLeft="4dp"
        />
        <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simuladoQuestoes"
        android:textColor="@color/branco"
        android:textSize="15sp"
        android:textStyle="normal"
        android:gravity="center_vertical"
        android:paddingLeft="4dp"
        />
        
        <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simuladoAcertos"
        android:textColor="@color/branco"
        android:textSize="12sp"
        android:textStyle="normal"
        android:gravity="center_vertical"
        android:paddingLeft="4dp"
        />
	    

</LinearLayout>