<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_azul"
    android:orientation="vertical" >

    <include layout="@layout/action_bar_voltar"/>
    
    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:background="@color/background_azul">
	<View android:background="@color/azul_claro" android:layout_gravity="center" android:layout_height="1dip" />
    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" 
        android:padding="3dp">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

           <TextView
               style="@style/TextoTituloPesquisa"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:paddingTop="0dp"
               android:text="@string/banca" />

               <Spinner
                  android:id="@+id/spBanca"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1" />

               <TextView
                  style="@style/TextoTituloPesquisa"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:paddingLeft="2dp"
                  android:paddingTop="0dp"
                  android:text="@string/instituicao" />

               <Spinner
                  android:id="@+id/spInstituicao"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  />
               <View
                  android:layout_width="0dp"
                  android:layout_height="1dp"
                  android:background="@color/branco" />

               <TextView
                  style="@style/TextoTituloPesquisa"
                  android:layout_width="fill_parent"
	              android:layout_height="wrap_content"
                  android:paddingLeft="2dp"
                  android:paddingTop="0dp"
                  android:text="@string/ano" />

               <Spinner
                  android:id="@+id/spAno"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1" />

               <TextView
                  style="@style/TextoTituloPesquisa"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:paddingLeft="2dp"
                  android:paddingTop="0dp"
                  android:text="@string/cargo" />

               <Spinner
                  android:id="@+id/spCargo"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1" />

				<TableRow
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center"
				    android:gravity="left" >
				    
				<TextView
                  style="@style/TextoTituloPesquisa"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:paddingLeft="2dp"
                  android:paddingTop="0dp"
                  android:paddingRight="7dp"
                  android:text="@string/nivel" />                
                
                <CheckBox
                      android:id="@+id/ckNivelSuperior"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                       android:textColor="@color/branco"
                      android:text="@string/superior"/>

                <CheckBox
                      android:id="@+id/ckNivelMedio"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/medio"
                      android:textColor="@color/branco"/>
				
				
                </TableRow>
<!-- Tipo de Questão apenas na proxíma versão
				<TextView
                  style="@style/TextoTituloPesquisa"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:paddingLeft="2dp"
                  android:paddingTop="2dp"
                  android:paddingRight="7dp"
                  android:text="@string/tipo_questao" />
				
				<TableRow 
				    android:gravity="left"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content">
                <CheckBox
                      android:id="@+id/ckMultiplaQuestao"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:checked="true"
                      android:text="@string/textoMultipla"
                      android:textColor="@color/branco"
                      />

                <CheckBox
                      android:id="@+id/ckVerdadeiraQuestao"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/textoCertoErrado"
                      android:textColor="@color/branco"/>
				
				
                </TableRow>

      -->           
                </LinearLayout>
            </ScrollView>

     <TableRow
         android:id="@+id/tableRow1"
         android:layout_width="fill_parent"
         android:layout_height="48dp"
         android:layout_gravity="center"
         android:gravity="bottom" >

         <View
             android:layout_height="1dip"
             android:background="@color/cinza"
             android:paddingTop="4dip" />
     </TableRow>

     <ImageButton
         android:id="@+id/btContinuar"
         style="@style/TitleBar"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:background="@color/azul_claro"
         android:contentDescription="@string/btContinuar"
         android:src="@drawable/acao_criar_simulados"
         android:textColor="@color/preto"
         android:textSize="17sp"
         android:textStyle="bold" />

    </TableLayout>

</LinearLayout>